--- a/styles/17.css
+++ b/styles/17.css
@@ -903,7 +903,7 @@
 
 .elementor-16 .elementor-element.elementor-element-a125c94:not(.elementor-motion-effects-element-type-background),
 .elementor-16 .elementor-element.elementor-element-a125c94>.elementor-motion-effects-container>.elementor-motion-effects-layer {
-  background-image: url("../assets/images/services/foodstall.webp");
+  background-image: url("../assets/images/services/foodstall.jpeg");
   background-size: cover;
   background-position: center;
 }
